--- a/modulo1-practica-fin-de-semana/package.json
+++ b/modulo1-practica-fin-de-semana/package.json
@@ -23,7 +23,7 @@
 	},
 	"scripts": {
 		"start": "./node_modules/.bin/gulp",
-		"docs": "rm -rf docs && gulp docs",
+		"docs": "rm -rf docs && ./node_modules/.bin/gulp docs",
 		"push-docs": "rm -rf docs && gulp docs && git add docs/* && git commit -m \"Update docs\" && git push",
 		"deploy": "npm run push-docs"
 	},
